# e_learning_back

./: .gitignore  db.sqlite3  pyproject.toml
todo/: admin.py  apps.py  models.py  serializers.py  settings.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todo_api/: admin.py  urls.py  views.py
todo_app/: admin.py  models.py  urls.py
todo_app/migrations/: 0001_initial.py  0002_remove_task_user_task_owner.py  0003_alter_task_owner.py  0004_alter_task_owner.py  0005_rename_owner_task_user.py  0006_alter_task_user.py  0007_remove_task_user.py  0008_task_user.py  0009_remove_task_id_task_task_id.py  0010_alter_task_task_id.py  0011_rename_task_id_task_key.py  0012_alter_task_date.py  0013_task_category.py
