[tool.poetry]
name = "last-todo"
version = "0.1.0"
description = ""
authors = ["Ousmane <ousmane.209@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.14.0"
djoser = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
flake8-quotes = "^3.3.2"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
